--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --primario: #434A12;
+    --primario: black;
     --secundario: rgb(100, 130, 146);
     --botonesAmarillo: #e2a430;
 }
