--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 :root {
-    --primario: lightGray;
+    --primario: #455A64;
     --secundario: rgb(100, 130, 146);
     --botonesAmarillo: #e2a430;
 }
